fix: video tab section toggle  (#562)
* fix: video tab toggle code refactor

* fix: transcript tab

* fix: linting issues

* some extra margin removed

* video toggle css updated

--- a/course/assets/css/video.scss
+++ b/course/assets/css/video.scss
@@ -128,3 +128,25 @@ a.video-download-button:visited {
     padding-bottom: 0px;
   }
 }
+
+.video-tab-header {
+  background-color: #f6f7f9;
+  font-size: $font-lg;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 5px;
+  padding-top: 10px;
+  margin-bottom: 10px;
+}
+
+.video-tab-section-toggle {
+  i:after {
+    content: "add";
+  }
+}
+
+.video-tab-section-toggle[aria-expanded="true"] {
+  i:after {
+    content: "remove" !important;
+  }
+}
